cabal-version:      2.4
name:               hlox
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mark van den Bosch
maintainer:         markvandenbosch@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hlox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      AstPrinter
      Expr
      Object
      Scanner
      Parser
      Token
      TokenType
      RecursiveParser
      Interpreter
      
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:
        src
        app
    default-language: Haskell2010
